--- a/css/main.css
+++ b/css/main.css
@@ -3,31 +3,45 @@ html {
 }
 
 .masthead {
-
+  background-color: #588477;
+  border-bottom: 3px solid #467366;
+  border-top: 3px solid #467366;
+  background-image: url("../images/leaf-bg.svg");
+  background-position: left top, left bottom, left top;
 }
 
 .logo {
   text-align: center;
+  color: #fff;
 }
 
 .nav {
   text-align: center;
+
 }
 
 .nav a {
   text-decoration: none;
+  background-color: #588477;
+  border: 3px solid #2d5a4d;
+  border-radius: 8px;
+  color: #fff;
+
 }
 
 .nav a:hover {
-
+  background-color: #fff;
+  color: #2d5a4d;
+  background-image: url(../images/leaf-icon.svg);
+  background-repeat: no-repeat;
 }
 
 .banner {
-
+  background: url(../images/banner.jpg) no-repeat center bottom / cover;
 }
 
 .banner-content {
-
+  color: #fff;
 }
 
 @media only screen and (min-width: 60em) {
