--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,6 @@ html {
   font-family: Lora, serif;
 }
 
-body {
-  background-image: url("../images/banner.jpg");
-  background-size: cover;
-}
-
 .masthead {
   background-color: #588477;
   border-bottom: 3px solid #467366;
@@ -22,33 +17,40 @@ body {
 
 .nav {
   text-align: center;
-
 }
 
 .nav a {
   text-decoration: none;
-  background-color: #588477;
+  background-color: #467366;
   border: 3px solid #2d5a4d;
   border-radius: 8px;
   color: #fff;
-
 }
 
 .nav a:hover {
   background-color: #fff;
-  color: #2d5a4d;
+  color: #145b1d;
   background-image: url(../images/leaf-icon.svg);
   background-repeat: no-repeat;
 }
 
 .banner {
-
+  background:
+    linear-gradient(to top, rgba(16, 52, 41, .8), rgba(16, 52, 41, 0) 50%),
+    url("../images/banner.jpg");
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #fff;
+  padding-top: 180px;
 }
 
 .banner-content {
-  color: #fff;
-  background-image: url("../images/two-leaves.svg");
+  background: url("../images/two-leaves.svg");
+  background-position: .75em 0;
   background-repeat: no-repeat;
+  background-size: 100px;
+  padding-top: 120px;
 }
 
 @media only screen and (min-width: 60em) {
