--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ html {
 .nav a:hover {
   background-color: #fff;
   color: #145b1d;
-  background-image: url(../images/leaf-icon.svg);
+  background-image: url("../images/leaf-icon.svg");
   background-repeat: no-repeat;
 }
 
